# SixEight

./: CMakeLists.txt  Create-Solution.cmd  README.md
six_eight/: CMakeLists.txt
six_eight/include/dak/six_eight/: puzzle.h  six_eight.h  solution.h  solve.h  stream.h  tile.h
six_eight/src/: puzzle.cpp  solution.cpp  solve.cpp  stream.cpp  tile.cpp
six_eight_solver/puzzles/: Puzzles.txt
six_eight_solver/src/: six_eight_solver.cpp
six_eight_solver_app/: CMakeLists.txt
six_eight_solver_app/include/: main_window.h
six_eight_solver_app/src/: main_window.cpp  six_eight_solver_app.cpp
six_eight_tests/src/: solution_tests.cpp  solve_tests.cpp  tile_tests.cpp
